--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <nav class="nav-bar">
+        <h1 class="logo">&lt;Portfolio&gt;</h1>
+    </nav>
 </body>
 </html>
