--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <nav class="nav-bar">
         <h1 class="logo">&lt;Portfolio&gt;</h1>
+
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#" class="cntct-btn">Contact Me</a></li>
+        </ul>
     </nav>
+
+    <div class="container">
+        <section id="homepage" class="homepage"> 
+            <div class="text-content"></div>
+            <div class="img-content"></div>
+        </section>
+    </div>
 </body>
 </html>
