--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
         </ul>
     </nav>
 
-    <div class="container">
-        <section id="homepage" class="homepage"> 
-            <div class="text-content"></div>
-            <div class="img-content"></div>
-        </section>
-    </div>
+    <section id="homepage" class="homepage"> 
+        <div class="text-content">
+            <p class="hello">HELLO, I AM</p>
+            <h1 class="name">Chris Jan</h1>
+            <h2 class="front-end">A Front End Developer</h2>
+            <p class="introduction">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse assumenda magnam ipsum, ipsa quasi quo placeat autem, voluptate laboriosam numquam fugiat eum quae sit.</p>
+            <button class="about-btn">About Me</button>
+            <button class="services-btn">My Services</button>
+        </div>
+        <div class="img-content">
+            <img src="magicpattern-blob-1662296814513.png" alt="" class="blob">
+        </div>
+    </section>
 </body>
 </html>
