--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1 class="logo">&lt;Portfolio&gt;</h1>
 
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="#homepage">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Skills</a></li>
-            <li><a href="#" class="cntct-btn">Contact Me</a></li>
+            <li class="cntct-btn"><a href="#" ><span>Contact Me</span></a></li>
         </ul>
     </nav>
 
@@ -30,6 +30,9 @@
         </div>
         <div class="img-content">
             <img src="magicpattern-blob-1662296814513.png" alt="" class="blob">
+            <img src="Saly-38.png" class="saly" alt="">
+            <img src="doodle-4 1.png" alt="" class="object1">
+            <img src="doodle-5 1.png" alt="" class="object2">
         </div>
     </section>
 </body>
