--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h1 class="name">Chris Jan</h1>
             <h2 class="front-end">A Front End Developer</h2>
             <p class="introduction">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse assumenda magnam ipsum, ipsa quasi quo placeat autem, voluptate laboriosam numquam fugiat eum quae sit.</p>
-            <button class="about-btn">About Me</button>
-            <button class="services-btn">My Services</button>
+            <a href=""><button class="about-btn"><span>About Me</span></button></a>
+            <a href=""><button class="services-btn"><span>My Services</span></button></a>
         </div>
         <div class="img-content">
             <img src="magicpattern-blob-1662296814513.png" alt="" class="blob">
