--- a/index.html
+++ b/index.html
@@ -21,19 +21,26 @@
 
     <section id="homepage" class="homepage"> 
         <div class="text-content">
-            <p class="hello">HELLO, I AM</p>
-            <h1 class="name">Chris Jan</h1>
-            <h2 class="front-end">A Front End Developer</h2>
-            <p class="introduction">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse assumenda magnam ipsum, ipsa quasi quo placeat autem, voluptate laboriosam numquam fugiat eum quae sit.</p>
-            <a href=""><button class="about-btn"><span>About Me</span></button></a>
-            <a href=""><button class="services-btn"><span>My Services</span></button></a>
+            <p class="hello item">HELLO, I AM</p>
+            <h1 class="name item">Chris Jan</h1>
+            <h2 class="front-end item">A Front End Developer</h2>
+            <p class="introduction item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse assumenda magnam ipsum, ipsa quasi quo placeat autem, voluptate laboriosam numquam fugiat eum quae sit.</p>
+            <a href=""><button class="about-btn item"><span>About Me</span></button></a>
+            <a href=""><button class="services-btn item"><span>My Services</span></button></a>
         </div>
         <div class="img-content">
-            <img src="magicpattern-blob-1662366672842.png" alt="" class="blob">
-            <img src="Saly-38.png" class="saly" alt="">
-            <img src="doodle-4 1.png" alt="" class="object1">
-            <img src="doodle-5 1.png" alt="" class="object2">
+            <img src="magicpattern-blob-1662366672842.png" alt="" class="blob img">
+            <img src="Saly-38.png" class="saly img" alt="">
+            <img src="doodle-4 1.png" alt="" class="object1 img">
+            <img src="doodle-5 1.png" alt="" class="object2 img">
         </div>
     </section>
+
+
+
+    <!--Javascript-->
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
