--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#homepage">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Skills</a></li>
-            <li class="cntct-btn"><a href="#" ><span>Contact Me</span></a></li>
+            <li class="cntct-btn nav-button"><a href="#" ><span>Contact Me</span></a></li>
         </ul>
     </nav>
 
