--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <ul class="nav-links">
             <li><a href="#homepage">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#about-me">About</a></li>
             <li><a href="#">Skills</a></li>
             <li class="cntct-btn nav-button"><a href="#" ><span>Contact Me</span></a></li>
         </ul>
@@ -43,6 +43,20 @@
         </div>
     </section>
 
+    <!---About me section-->
+    <section id="about-me" class="about-me">
+        <div class="img-div">
+            <div class="circle">
+                <img src="Saly-41.png" class="saly-front" alt="">
+            </div>
+        </div>
+        <div class="about-me-texts">
+            <p class="hi-there">Hi There</p>
+            <h1 class="about-me-name">I am Chris Jan Beboso.</h1>
+            <h1 class="about-me-intro">A front end web developer and designer based in the Philippines.</h1>
+            <p class="about-me-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, minima. Voluptatem incidunt quisquam et eveniet doloremque rem recusandae quos nam.</p>
+        </div>
+    </section>
 
 
     <!--Javascript-->
