done skills page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="nav-links">
             <li><a href="#homepage">Home</a></li>
             <li><a href="#about-me">About</a></li>
-            <li><a href="#">Skills</a></li>
+            <li><a href="#skills-page">Skills</a></li>
             <li class="cntct-btn nav-button"><a href="#" ><span>Contact Me</span></a></li>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
             <h2 class="front-end item">A Front End Developer</h2>
             <p class="introduction item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse assumenda magnam ipsum, ipsa quasi quo placeat autem, voluptate laboriosam numquam fugiat eum quae sit.</p>
             <a href="#about-me"><button class="about-btn item"><span>About Me</span></button></a>
-            <a href=""><button class="services-btn item"><span>My Services</span></button></a>
+            <a href="#skills-page"><button class="services-btn item"><span>My Skills</span></button></a>
         </div>
         <div class="img-content">
             <img src="magicpattern-blob-1662366672842.png" alt="" class="blob img">
@@ -62,6 +62,32 @@
         
     </section>
 
+    <!--Skills Layout-->
+    <section id="skills-page" class="skills-page" >
+        <div class="grid" data-aos="fade-left" data-aos-delay="100" data-aos-duration="1500">
+            <h1 class="my-skills" >My SKills</h1>
+        <div class="div1">
+            <i class="uil uil-arrow"></i>
+            <h3>Web Development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque modi non illo quis accusantium.</p>
+        </div>
+        <div class="div2">
+            <i class="uil uil-database"></i>
+            <h3>Database Management</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque modi non illo quis accusantium.</p>
+        </div>
+        <div class="div3">
+            <i class="uil uil-icons"></i>
+            <h3>Graphics Designing</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque modi non illo quis accusantium.</p>
+        </div>
+        <div class="div4">
+            <i class="uil uil-java-script"></i>
+            <h3>Javasript Programming</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque modi non illo quis accusantium.</p>
+        </div>
+        </div>
+    </section>
 
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
