--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
         </div>
     </section>
 
+    <footer>
+        <div class="icon-links" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1500">
+            <h1>Let's Get in Touch!</h1>
+            <p>You can contact me through my social media links for business discussions. You can also message me directly thru email. Have a Good Day!</p>
+            <a href="#"><button><i class="uil uil-facebook-f"></i></button></a>
+            <button><i class="uil uil-google"></i></button>
+            <button><i class="uil uil-github-alt"></i></button>
+            <button><i class="uil uil-linkedin-alt"></i></button>
+        </div>
+        <div class="form-div">
+            <form action="">
+                <label for="email">Email</label>
+                <input type="email" name="" id="email">
+                <label for="message">Message</label>
+                <input type="text" id="message">
+                <button type="submit" classs="submit-btn">Submit</button>
+            </form>
+        </div>
+    </footer>
+
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 
