--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>You can contact me through my social media links for business discussions. You can also message me directly thru email. Have a Good Day!</p>
             <a href="https://www.facebook.com/chrisjanbeboso" target="_blank"><button><i class="uil uil-facebook-f"></i></button></a>
 
-            <a href=""><button><i class="uil uil-google"></i></button></a>
+            <button><i class="uil uil-google"></i></button>
 
             <a href="https://github.com/Janjanny" target="_blank"><button><i class="uil uil-github-alt"></i></button></a>
             
